@@ -1,6 +1,6 @@
 # SESSION-HANDOFF — 主交接文档(唯一入口,非常详细版)
 
-> **状态**: 2026-08-16 | 卷 2 写作中: **138/152 篇完成**(第 1 批 12 + 第 2 批 26 + 第 3 批 14 + 第 4 批 21 + 第 5 批 32 + 第 6 批 32 + 第 7 批 1) | 第 1-6 批**全部完结**;第 7 批(上层)进行中,**本会话 55 篇: 20-02 + 27-jni(3) + 30-jvm-entry(3) + 32-jfr(6) + 34-nmt(2) + 36-attach(2) + 37-heap-dumper(2) + 39-runtime-monitoring(2) + 46-sa(1) + 14-c1(4,14 域完结) + 15-c2(8,15 域完结) + 21-shared-runtime(3,21 域完结) + 25-gc-framework(6,25 域完结) + 28-jvmti(3,28 域完结) + 29-mh(2,29 域完结) + 33-jmx(3,33 域完结) + 43-nio-net(3,43 域完结) + 22-deopt(1,22 域 1/2)**;下一篇 22-deoptimization/02(unpack 帧重建,22 域收官)** | **上下文已满,本文件为非常详细交接版**——新 AI 只读本文件即可继续,不要依赖旧会话记忆
+> **状态**: 2026-08-16 | 卷 2 写作中: **139/152 篇完成**(第 1 批 12 + 第 2 批 26 + 第 3 批 14 + 第 4 批 21 + 第 5 批 32 + 第 6 批 32 + 第 7 批 2) | 第 1-6 批**全部完结**;第 7 批(上层)进行中,**本会话 56 篇: 20-02 + 27-jni(3) + 30-jvm-entry(3) + 32-jfr(6) + 34-nmt(2) + 36-attach(2) + 37-heap-dumper(2) + 39-runtime-monitoring(2) + 46-sa(1) + 14-c1(4,14 域完结) + 15-c2(8,15 域完结) + 21-shared-runtime(3,21 域完结) + 25-gc-framework(6,25 域完结) + 28-jvmti(3,28 域完结) + 29-mh(2,29 域完结) + 33-jmx(3,33 域完结) + 43-nio-net(3,43 域完结) + 22-deopt(2,22 域完结)**;下一篇 26-g1-gc/01(HeapRegion,第 7 批 2/5)** | **上下文已满,本文件为非常详细交接版**——新 AI 只读本文件即可继续,不要依赖旧会话记忆
 > **接收者: 新 AI —— 只读本文件,按"十、下一步"执行**
 
 ---
@@ -47,7 +47,7 @@
 第 4 批(执行/帧): 10(3) → 19(4) → 23(3) → 24(3) → 08(4) → 31(2) → 44(2)   ✅ 完结 21/21
 第 5 批(VM 核心): **11 ✅ → 12 ✅ → 13 ✅ → 18 ✅ → 20 ✅(2/2) → 27 ✅(3/3) → 30 ✅(3/3) → 32 ✅(6/6) → 34 ✅(2/2) → 36 ✅(2/2) → 37 ✅(2/2) → 39 ✅(2/2) → 46 ✅(1/1)** ✅ **第 5 批 13/13 收官**
 第 6 批(JIT/GC): 14 ✅ → 15 ✅(8/8) → 21 ✅(3/3) → **25 ✅(6/6,25 域完结)** → **28 ✅(3/3,28 域完结)** → **29 ✅(2/2,29 域完结)** → **33 ✅(3/3,33 域完结)** → **43 ✅(3/3,43 域完结,第 6 批收官)** → 第 7 批: 22 → 26 → 35 → 40 → 47
-第 7 批(上层): 22 ✅(1/2) → 26 → 35 → 40 → 47
+第 7 批(上层): **22 ✅(2/2,22 域完结)** → 26 → 35 → 40 → 47
 ```
 
 **已完成 126 篇**(全部在 `docs/openjdk/vol-02/`):
@@ -97,7 +97,7 @@
 | **29-mh** | 2 | `29-mh/01-invoke-chain.md`(105)+`02-x86-adapter.md`(96) | ✅ **29 域完结(本会话)** |
 | **33-jmx** | 3 | `33-jmx/01-memory-service.md`(185)+`02-jmm-interface.md`(168)+`03-gc-notifier-flags.md`(161) | ✅ **33 域完结(本会话)** |
 | **43-nio-net** | 3 | `43-nio-net/01-tcp-epoll.md`(108)+`02-udp-dns.md`(122)+`03-filesystem.md`(167) | ✅ **43 域完结,第 6 批收官(本会话)** |
-| **22-deoptimization** | 1 | `22-deoptimization/01-deopt-decision.md`(149) | ✅ 22 域 1/2(本会话) |
+| **22-deoptimization** | 2 | `22-deoptimization/01-deopt-decision.md`(149)+`02-unpack-frames.md`(119) | ✅ **22 域完结(本会话)** |
 
 ### 本会话 50 篇的 commit 清单(按 git log 为准,2026-08-14/16)
 
@@ -118,6 +118,8 @@
 **43-nio-net/03(NIO FileSystem,43 域收官,第 6 批收官)**: 正文 d03cc8d(167 行)→ 大纲回填 ⚠️ 9 块 bb15605→ README 5e3358d(137/152,43 域完结,第 6 批收官)→ 素材 33-nio-fs-strace.txt
 
 **22-deoptimization/01(Deopt 决策表,22 域 1/2,第 7 批开篇)**: 正文 b561914(149 行)→ 大纲回填 ⚠️ 8 块 a4e0eda→ README fa1353a(138/152)→ 素材 22-deopt-type-demo.txt
+
+**22-deoptimization/02(unpack 帧重建,22 域收官)**: 正文 46a39e5(119 行)→ 大纲回填 ⚠️ 8 块 86f553c→ README 2cf98dc(139/152,22 域完结)→ 素材 22-deopt-unpack-demo.txt
 
 **20-vm-operations/02(后台任务与启动序列,20 域收官)**: 正文 4e942c1(372 行)→ 回填 ⚠️ 14 组 → README 7aae8ba(84/152,20 域完结,第 5 批 11/13)→ 素材 20-background-init-demo.txt→ **第 3 轮** e1a7c49(01 篇后续链接文本与 02 实际标题对齐;02 关联域去 04-logging 改 39-runtime-mon;设计意图表述收窄到注释原意;VMThread 优先级表述精确化"必须低于 WatcherThread")→ **第 4 轮** 1bc3a42(①ServiceThread 行号与职责对齐——serviceThread.hpp:30 类注释+:84 entry 循环,:107-139 JVMTI/GCNotifier/DCmd 三事件;②Agent 启动时序——线程列表 :3804 才初始化,代理在调用者线程上;③sleep 重算循环 :1435-1446;④关键设计引注回 :1369-1371 原意;⑤stubGenerator 注释 :5974-5976;⑥AbortVMOnVMOperationTimeout 补默认 false globals.hpp:528;⑦静态数组块补 task.cpp:32-33 标注;⑧ServiceThread 'GC 低内存通知'→'GC 通知(GCNotifier)';验证 develop flag 在 PRODUCT 下是 const 常量→CleanChunkPoolAsync 恒 true)
 
@@ -255,7 +257,7 @@
 | 命令输出 | `materials/commands/` 150+ 文件 | jcmd/jstat/jmap/jfr 等真实输出 |
 | 卷 T 文章 | `vol-tools/ch01.md`~`ch07.md` | 引用格式: "[卷 T ch02](openjdk/vol-tools/ch02.md)" |
 
-**本会话新增素材 54 个**(全部 gitignore 不入库,在 materials/commands/):
+**本会话新增素材 55 个**(全部 gitignore 不入库,在 materials/commands/):
 - `29-mh-adapter-demo.txt`(x86 Adapter 实证——**JDK11 无 ricochet frame**: (A) grep 铁证——'ricochet' 在 hotspot methodHandles.cpp/hpp/methodHandles_x86.cpp 与 Java 侧 java.lang.invoke 全部零命中(JDK8 的手写 adapter 汇编整体移除);(B) MethodHandlesAdapterBlob=BufferBlob(codeBlob.hpp:452-454),adapter_code_size LP64=32000(methodHandles_x86.hpp:30),只含 6 个签名多态入口(29-01);(C) jump_from_method_handle(methodHandles_x86.cpp:120-155)逐行: 空 Method*→throw_AbstractMethodError :153-154/interp_only_mode 检查 :130-147(28-01 §4 衔接)/jmp from_compiled|from_interpreted :149-151——**参数零搬运**(调用约定共享);(D) Java 侧 adapter: asType 三级路径(MethodHandle.java:836-852 fast path+asTypeCache→makePairwiseConvert MethodHandleImpl.java:250-255→makePairwiseConvertByEditor :266+ 逐参数 filter)/LambdaFormEditor 编辑 LF(LambdaFormEditor.java:45: permute :848/spread :510/collect :555/filter :627)/guardWithTest :768;(E) 历史对照: JDK8 ricochet frame 汇编 vs JDK11 LF 字节码(演进动机标注为推断))
 - `29-mh-invoke-demo.txt`(MH invoke 链路实证: (A) 性能对照(核心)——2000 万次 -Xbatch: 直接 9ms/invokeExact(参数 MH)52ms/**invokeExact(static final 常量 MH)10ms(1.11 倍,与直接调用几乎持平)**/反射 218ms;reflection/invokeExact(param)=4.19——**'50x'是 JDK8 历史说法,JDK11 实测 ~4-5 倍**;(B) PrintInlining invokeExactCall 树: Invokers$Holder::invokeExact_MT(24 bytes) force inline by annotation+checkExactType/checkCustomized(force inline)+**MethodHandle::invokeBasic(LI)I (0 bytes) receiver not constant**(callGenerator.cpp:861-863 失败打印)+DirectMethodHandle::internalMemberName force inline;(C) 反射树: acquireMethodAccessor 不内联+MethodAccessorImpl no static binding+Integer::valueOf/intValue 装箱;(D) 源码定位: 6 intrinsic vmSymbols.hpp:1435-1441/generate_method_handle_interpreter_entry methodHandles_x86.cpp:203-290/jump_to_lambda_form :157-198 链 MH→form→vmentry→method→ResolvedMethodName→Method*/generate_method_handle_dispatch :292-489(linkToVirtual vtable 'same as TemplateTable::invokevirtual' :408-409)/callGenerator.cpp for_method_handle_inline :824-957/LambdaForm prepare :827-843+compileToBytecode :857-878/COMPILE_THRESHOLD 默认 0 MethodHandleStatics.java:71-72)
 - `28-jvmti-tagmap-demo.txt`(TagMap 全链路: (A) SetTag 3 对象(1001/2002/3003)→重打更新(1001→1002)→GetObjectsWithTags 精确返回 2 个→IterateThroughHeap(UNTAGGED filter)回调 3 个 tagged→丢弃强引用+ForceGarbageCollection→**ObjectFree×3 tag 精确匹配**→GetObjectsWithTags 返回 0;(B) -Xlog:jvmti+objecttagging=trace 看到 do_weak_oops 日志 **(3->0, 3 freed, 0 total moves)**(:3427-3428);(C) **filter 反直觉语义**: JVMTI_HEAP_FILTER_TAGGED 传进去回调 43650 个(untagged!),UNTAGGED 才 3 个——filter 位=排除类别(is_filtered_by_heap_filter :1017-1034 "filter out tagged objects");(D) 源码定位: entry phantom oop :92/hash (addr>>3)%size :194/load_factor 4.0 :166/tag_map_for 懒创建 :529-541/set_tag 三态 :738-767/weak 清理链 weakProcessor.cpp:36-41→do_weak_oops :3335/ObjectMarker mark 位 :1654-1734/VM_HeapWalkOperation :2663-3300/ForceGarbageCollection jvmtiEnv.cpp:1954)
@@ -311,7 +313,7 @@
 
 ### 6.0 本会话精华速查(新 AI 写 33-jmx/01 前必读)
 
-**本会话覆盖(55 篇,6.52-6.93)**: 20-vm-operations/02 → 27-jni(3) → 30-jvm-entry(3) → 32-jfr(6) → 34-nmt(2) → 36-attach(2) → 37-heap-dumper(2) → 39-runtime-monitoring(2) → 46-sa(1) → 14-c1(4,完结) → 15-c2(8,完结) → 21-shared-runtime(3,完结) → 25-gc-framework(6,完结) → **28-jvmti(3,完结)** → **29-mh(2,完结)** → **33-jmx(3,完结)** → **43-nio-net(3,完结)** → **22-deopt(1/2)**。下一篇 22-deoptimization/02(unpack 帧重建;剩余 22-02→26/35/40/47)。
+**本会话覆盖(56 篇,6.52-6.94)**: 20-vm-operations/02 → 27-jni(3) → 30-jvm-entry(3) → 32-jfr(6) → 34-nmt(2) → 36-attach(2) → 37-heap-dumper(2) → 39-runtime-monitoring(2) → 46-sa(1) → 14-c1(4,完结) → 15-c2(8,完结) → 21-shared-runtime(3,完结) → 25-gc-framework(6,完结) → **28-jvmti(3,完结)** → **29-mh(2,完结)** → **33-jmx(3,完结)** → **43-nio-net(3,完结)** → **22-deopt(2,完结)**。下一篇 26-g1-gc/01(HeapRegion,第 7 批 2/5;剩余 26-02/03/04→35/40/47)。
 
 **大纲漂移的高发类型(28/29 域新实例)**:
 1. **文件/类名编造**: jvmtiEnv.hpp 不存在(28-01,真实 jvmtiEnvBase.hpp+生成类)、relocator.cpp 位置错(28-02,真实 share/runtime 非 prims,且只是 ldc→ldc_w 配角)、"weak hash table auto-removed"(28-03,真实普通哈希表+phantom oop+GC 显式清理)、LambdaForm 在 hpp(29-01,真实 Java 侧 LambdaForm.java)——**文件名/类名一律 find/grep**
@@ -1245,6 +1247,20 @@
 - **悬念指向** ✓(02-unpack-frames,标题="从编译帧回到解释器——unpack 帧重建")
 - 素材: 22-deopt-type-demo.txt
 
+
+### 6.94 22-deoptimization/02(从编译帧回到解释器——unpack 帧重建,22 域收官,大纲 10+ 处漂移含 4 处机制编造 + 深审 2 轮,2026-08-16)
+
+- **"deoptimization.cpp:623-700 scope→vframe" 编造**: 打包=**fetch_unroll_info**(deoptimization.cpp:139,JRT_BLOCK_ENTRY)→**fetch_unroll_info_helper**(:158): 收集 compiledVFrame 链→**create_vframeArray**(:1169)→vframeArrayElement::**fill_in**(vframeArray.cpp:60)——ScopeValue 从"编译时描述"变"数值";**"unpack_deoptimization" 不存在**(真实=unpack_frames :623+unpack_to_stack vframeArray.cpp:567)
+- **vframeArray 归属错**: 在 **vframeArray.hpp**(非 deoptimization.hpp:35): class :121/内存布局注释 :127-140(固定部分=原帧+_frames+callee 寄存器保存区;变长部分=element 数组)/Element :50(iframe/locals/expressions/monitors);**UnrollBlock** 在 deoptimization.hpp:178
+- **"deoptimization.cpp:900-1200 逐帧 unpack" 行号错**: 逐帧填充=**unpack_to_stack**(vframeArray.cpp:567-630): 骨架定位(iframe 指针,:580-586,骨架由 DeoptimizationBlob 汇编按 UnrollBlock 尺寸预铺)+**从老到幼** unpack_on_stack(:591-619,callee_parameters/locals 逐层传递 :593-604)+unwind_callee_save_values(:615)
+- **unpack_on_stack(vframeArray.cpp:171)四件事**: ①**bcp/pc 精确恢复**(:183-201): SynchronizationEntryBCI→deopt_entry / should_reexecute→deopt_reexecute_entry / 正常→deopt_continue_after_entry(abstractInterpreter.hpp:178-194)——**已执行字节码绝不重跑**;exec_mode 覆盖(:262-283): Unpack_exception→raw_exception_handler_for_return_address(21-03)/uncommon_trap+reexecute→deopt_entry 重做;②**Interpreter::layout_activation**(:292-300;abstractInterpreter_x86.cpp:57)——解释器侧帧布局;③**复制监视器**(:312-319,BasicObjectLock move_to,无独立 populate_monitors 函数——大纲 :1450-1650 编造);④**设 bcp/mdp**(:322-330)
+- **frame_sizes**: :381-460(索引方向=frame_sizes[0] 最老帧,:439-440;pc 占位 deopt_entry-pc_return_offset :447-449);UnrollBlock=汇编铺骨架的尺寸预算
+- **控制权交接**: unpack_frames 尾(:655-700): return_type(:655,Unpack_exception 强制 T_OBJECT :660-663)→cleanup_deopt_info→deopt blob 按 return_type 恢复寄存器→跳解释器入口;VerifyStack(develop)逐帧对照 InterpreterOopMap(:667-700)
+- **NoSafepointVerifier(:308)**: 指针进 vframeArray 后不许再 safepoint(GC 扫不到中间态)
+- **悬念指向错**: "域23 StubRoutines"过期(23 域第 4 批已完结)——正确 **26-g1-gc/01**(第 7 批,"堆被切成 2048 块 — HeapRegion + G1CollectedHeap")
+- **实证方法论**: 计时对照(deopt 窗口的直接证据): compiled 10M=0ms(C2 内联)/after-switch 10M=**8ms**(deopt+解释器+重编译混合)/recompiled 10M=0ms——三组稳定;jhsdb jstack 能标帧类型但时序难抓(phase2 常抓到重编译后),放弃帧形态实证
+- 素材: 22-deopt-unpack-demo.txt
+
 ## 七、用户偏好与纪律(重要,违背会被批评)
 
 1. **严格按规划,不做多余选择**: 拓扑定了顺序就逐项推进——不要问"还是写 X?"(曾因制造选择被批评)
@@ -1314,8 +1330,9 @@
 - [x] 43-nio-net/01——✅ 完结(正文 634f710,108 行/大纲回填 ⚠️ 12 块 4047b2e/README 53780ec);**43 域 1/3**
 - [x] 43-nio-net/02——✅ 完结(正文 90c7a2a,122 行/大纲回填 ⚠️ 8 块 dec2722/README 95c07f2);**43 域 2/3**
 - [x] 43-nio-net/03——✅ 完结(正文 d03cc8d,167 行/大纲回填 ⚠️ 9 块 bb15605/README 5e3358d);**43 域完结,第 6 批收官**
-- [x] 22-deoptimization/01——✅ 完结(正文 b561914,149 行/大纲回填 ⚠️ 8 块 a4e0eda/README fa1353a);**22 域 1/2,第 7 批开篇**
-- [ ] **22-deoptimization/02**——**下一篇**;大纲 `planning/outlines/22-deoptimization/02-unpack-frames.md`(从编译帧回到解释器——unpack 帧重建);22 域收官;01 篇悬念已指向 02
+- [x] 22-deoptimization/01——✅ 完结(正文 b561914,149 行/大纲回填 ⚠️ 8 块 a4e0eda/README fa1353a);**22 域 1/2**
+- [x] 22-deoptimization/02——✅ 完结(正文 46a39e5,119 行/大纲回填 ⚠️ 8 块 86f553c/README 2cf98dc);**22 域完结,第 7 批 1/5 域**
+- [ ] **26-g1-gc/01**——**下一篇**;大纲 `planning/outlines/26-g1-gc/01-heapregion.md`(堆被切成 2048 块 — HeapRegion + G1CollectedHeap);26 域 1/4;22-02 悬念已指向 26
 - [ ] 用户 Ubuntu GUI 截图(8 项 14 张,手册 `planning/outlines/00-jvm-tools/GUI-manual.md`): 用户完成后补进对应文章
 - [ ] Obsidian 知识图谱(`planning/IDEAS-OBSIDIAN.md`,远期)
 - [ ] 每域完成后在 `vol-02/README.md` 勾选进度
@@ -1346,7 +1363,8 @@
 | 43-nio-net 源码(43 域 1/3) | JDK 侧 java.base/unix/native/libnet/PlainSocketImpl.c(1038 行: socketConnect :227 带超时=poll(2)+EINPROGRESS :348/socketAccept :587 NET_Timeout :644-652/socketClose0 :769 deferred close marker_fd :73/:783-786/socketCreate SO_REUSEADDR :203-215)+SocketInputStream.c:91(NET_ReadWithTimeout :127)/SocketOutputStream.c:57+net_util_md.h:80-92(NET_* 工具)+libnio/ch/Net.c(814 行: connect0 :306-322 三态/handleSocketError :783-812)+linux/libnio/ch/EPoll.c(97 行: 布局三兄弟 :41-56/create :59/ctl :69/wait :83)+linux/classes/sun/nio/ch/(EPoll.java:58-67 常量+allocatePollArray :72-74/EPollSelectorImpl.java:50-93 构造+processUpdateQueue :143-170/EPollPort.java:178-180 EPOLLONESHOT);01 正文即索引 |
 | 43-nio-net/02 源码 | java.base/unix/native/libnet/PlainDatagramSocketImpl.c(2221 行: send0 :334(connected→rmtaddrP=NULL :380/大缓冲整包 :391-404/ECONNREFUSED→PortUnreachable :437)/receive0 :708(NET_RecvFrom :818/NET_SockaddrToInetAddress :864)/datagramSocketCreate :891/mcast_join_leave :1890(IP_ADD_MEMBERSHIP 注释 :1925-1927/IPv4-mapped :2110-2125)/join :2180+leave :2192/setTimeToLive :1786)+Inet4AddressImpl.c(517 行: lookupAllHostAddr :105(getaddrinfo :128/去重 :145-178)/getLocalHostName :60)+NetworkInterface.c(2172 行: getAll :422/enumInterfaces :816→enumIPv4Interfaces :2004(getifaddrs :2007)/createNetworkInterface :659/getMacAddress :1275(ioctl SIOCGIFHWADDR :1288/全 0 检测 :1298-1304)/getMTU :1307)+JDK 侧 InetAddress.java:1255 getByName/:930 lookupAllHostAddr/NetworkInterface.java:357;02 正文即索引 |
 | 43-nio-net/03 源码(43 域已完结) | java.base/unix/native/libnio/fs/UnixNativeDispatcher.c(1244 行,49 个 JNIEXPORT: stat0 :543(stat64+RESTARTABLE+prepAttributes)/stat1 :559/openat0 :452(my_openat64_func dlsym :262-267)/opendir0 :733/fdopendir :748/readdir :774(readdir64 只返 d_name))+linux/native/libnio/fs/LinuxWatchService.c(153 行: eventSize :49/eventOffsets :55 布局五元组/inotifyInit :72/inotifyAddWatch :83/poll :133)+JDK 侧 LinuxWatchService.java(implRegister mask 映射 :208-262/Poller run :310→poll :316→read :320→unsafe 解析/maskToEventKind :384-390)+UnixNativeDispatcher.java(copyToNativeBuffer :39/stat :298/stat1 :315)+NativeBuffers.java:35;03 正文即索引 |
-| 22-deopt 源码(22 域 1/2) | `share/runtime/deoptimization.hpp`(DeoptReason :42-106(per-bytecode 8 个注释 :45-46/tenured :96/RECORDED_LIMIT :103)/DeoptAction :108-115/trap_request 位域 :117-125(_action_bits=3/_reason_bits=5/_debug_id_bits=23)/解包 :304-347/per_method_trap_limit :408-411)+`deoptimization.cpp`(uncommon_trap_inner :1526/防循环注释 :1745-1769/action switch :1797-1837/MDO 计数 :1858-1918/PerBytecodeTrapLimit 检查 :1875/make_not_entrant :1929/overflow :1960-1966/reprofile :1973/set_not_compilable :1980/uncommon_trap :2095/trap_state_reason :2118/add_reason :2149)+`opto/graphKit.hpp`(uncommon_trap(reason,action) :733-740)+`oops/methodData.hpp`(trap_bits 1+31 :139-142/_trap_hist :1986-2007/trap_count :2384)+`globals.hpp`(PerMethodRecompilationCutoff :1771=400/PerBytecodeRecompilationCutoff :1775=200/PerMethodTrapLimit :1779=100/PerMethodSpecTrapLimit :1783=5000/PerBytecodeTrapLimit :1788=4);01 正文即索引,02 篇主题=unpack 帧重建(vframeArray/fetch_unroll_info)
+| 22-deopt 源码(22 域 1/2) | `share/runtime/deoptimization.hpp`(DeoptReason :42-106(per-bytecode 8 个注释 :45-46/tenured :96/RECORDED_LIMIT :103)/DeoptAction :108-115/trap_request 位域 :117-125(_action_bits=3/_reason_bits=5/_debug_id_bits=23)/解包 :304-347/per_method_trap_limit :408-411)+`deoptimization.cpp`(uncommon_trap_inner :1526/防循环注释 :1745-1769/action switch :1797-1837/MDO 计数 :1858-1918/PerBytecodeTrapLimit 检查 :1875/make_not_entrant :1929/overflow :1960-1966/reprofile :1973/set_not_compilable :1980/uncommon_trap :2095/trap_state_reason :2118/add_reason :2149)+`opto/graphKit.hpp`(uncommon_trap(reason,action) :733-740)+`oops/methodData.hpp`(trap_bits 1+31 :139-142/_trap_hist :1986-2007/trap_count :2384)+`globals.hpp`(PerMethodRecompilationCutoff :1771=400/PerBytecodeRecompilationCutoff :1775=200/PerMethodTrapLimit :1779=100/PerMethodSpecTrapLimit :1783=5000/PerBytecodeTrapLimit :1788=4);01 正文即索引 |
+| 22-deopt/02 源码(22 域已完结) | `share/runtime/vframeArray.hpp`(Element :50/class :121/布局注释 :127-140)+`vframeArray.cpp`(fill_in :60/unpack_on_stack :171(bcp/pc :183-201/exec_mode :262-283/layout_activation :292-300/monitors :312-319/bcp+mdp :322-330)/unpack_to_stack :567-630(骨架 :580-586/从老到幼 :591-619/unwind_callee_save_values :615))+`deoptimization.cpp`(fetch_unroll_info :139/helper :158/NoSafepointVerifier :308/frame_sizes :381-460/create_vframeArray :1169/unpack_frames :623(return_type :655/exception :660-663/VerifyStack :667-700))+`deoptimization.hpp`(UnrollBlock :178)+`interpreter/abstractInterpreter.hpp`(deopt_entry :178/continue_after :189/reexecute :194)+`cpu/x86/abstractInterpreter_x86.cpp`(layout_activation :57);02 正文即索引,下一篇 26-g1-gc/01(第 7 批 2/5)
 | JVMTI 源码(28 域已开工) | `share/prims/jvmtiEnvBase.hpp`(655 行: 状态成员 :94-105/JvmtiEnv_from_jvmti_env :157-159/JvmtiEnvIterator :318)+`jvmtiEnv.cpp`(3733 行: SetEventNotificationMode :521/AddCapabilities :603)+`jvmtiEventController.hpp/cpp`(三级 bitset: JvmtiEnvEventEnable hpp:151-171/重算 :571-657/INTERP_EVENT_BITS :96-97/VM_EnterInterpOnlyMode :194-245)+`jvmtiExport.cpp`(3001 行: post_method_entry :1508/wrapper 调用侧/load_agent_library :2638)+`jvmtiManageCapabilities.cpp`(四集合 :70-146/add :233/update :292)+`jvmtiImpl.hpp/cpp`(JvmtiDeferredEvent 只服务 4 类编译事件 :454-549)+`jvmtiHpp.xsl`/`jvmtiEnter.xsl`/`jvmti.xml`(14993 行,154 函数/34 事件/44 能力,构建期生成源);28-01 正文即索引 |
 | JDK 侧源码 | `/data/workspace/jdk11u/src/java.base/`、`/data/workspace/jdk11u/src/jdk.jfr/` |
 | 工具素材 | `docs/openjdk/planning/outlines/00-jvm-tools/materials/`(commands/ 150+ 文件) |
@@ -1368,19 +1386,19 @@
 ## 十、下一步(读完立即做)
 
 ```
-【22-deoptimization/02 写作指引——22 域收官,unpack 帧重建】
-1. 读 planning/outlines/22-deoptimization/02-unpack-frames.md(注意 ⚠️ 块;01 篇回填 8 块,02 大概率同样漂移)。
-   22-02 主题=从编译帧回到解释器(unpack 帧重建),预判要点(以实际 grep 为准):
-   - 01 篇已铺底: uncommon_trap(:2095)→UnrollBlock 准备;本篇=unpack_frames/fetch_unroll_info(:1990+)/vframeArray
-   - 涉及: deoptimization.cpp(unpack_frames/vframeArray 构造/recreate_vframe)、vframeArray.hpp/cpp、
-     DeoptimizationBlob 4 个 unpack 变体(codeBlob.hpp:558-562,21-01 已提)、24-frame/03(deopt 的 GC 扫描)衔接
-   - 前会话已写: 24-frame/03-deopt-gc-scan.md、21-01(DeoptimizationBlob)——**跨篇衔接重点**
-2. 验证大纲所有 file:line 与专有名词——高发漂移类型照旧;unpack/vframeArray 相关行号以 grep 为准
+【26-g1-gc/01 写作指引——第 7 批 2/5,HeapRegion + G1CollectedHeap】
+1. 读 planning/outlines/26-g1-gc/01-heapregion.md(注意 ⚠️ 块;22 域回填 8 块/篇,26-01 大概率同样漂移)。
+   26-01 主题=堆被切成 region(HeapRegion+G1CollectedHeap),预判要点(以实际 grep 为准):
+   - share/gc/g1/: g1CollectedHeap.hpp/cpp(构造/region 分配)、heapRegion.hpp(region 头/字段/状态位)、
+     g1RegionToSpaceMapper/g1HeapRegionManager(region 表与映射)
+   - 25 域已写框架: g1CollectedHeap(g1MonitoringSupport/g1mm/memory_pools 等)——**本篇补 G1 本体结构,衔接**
+   - 25-02 已涉及: humongous 阈值 region/2、attempt_allocation 等——本篇聚焦 region 数据结构本身
+2. 验证大纲所有 file:line 与专有名词——高发漂移类型照旧;g1 相关行号以 grep 为准
 3. 实证优先用 /data/tmp/opencode/jdk11:
-   - 复用 22-01 的类型切换 demo;deopt 执行本身难以直接观察(develop flag 不可用)
-   - 可观察: deopt 后解释器计数(28 域方法);jstack 看栈帧形态(编译 vs 解释)
-4. 按第三节流程写 → 自查(脚本 /data/tmp/opencode/check.py,新引用文件先加 HS_MAP;ART 改回当前文件)→ 深审 2 轮 → 回填大纲 ⚠️ 块 → 提交 → 更新 README → 更新本文件 §二/§五/§6.94
-5. **HANDOFF §6 追加新节的强制操作顺序(教训 6.68-6.93,含强化)**: ①新节内容先写成独立文本;②插入 anchor 必须用**最后出现**的标题(`src.rfind("## 七、")`,教训补充 2)——**禁止用 "## 七" 整行当 oldString**(6.82 曾吞标题;6.87 曾命中反引号内引用致双副本);③**立即 `grep -n "^### 6\.9"` 校验连续递增 + `grep -n "^## 七"` 标题恰好 1 个 + `grep -n "^## 八"` 仍在**;④再做其他编辑
-6. 22 域后 → 26-g1 / 35-dcmd / 40-launcher / 47-instrumentation
+   - -Xlog:gc+heap=debug / jcmd GC.heap_info(36 域素材已见 heap_info)看 region 布局
+   - -Xlog:gc+region?标签可用性(25 域 gc+barrier 等标签经验)
+4. 按第三节流程写 → 自查(脚本 /data/tmp/opencode/check.py,新引用文件先加 HS_MAP;ART 改回当前文件)→ 深审 2 轮 → 回填大纲 ⚠️ 块 → 提交 → 更新 README → 更新本文件 §二/§五/§6.95
+5. **HANDOFF §6 追加新节的强制操作顺序(教训 6.68-6.94,含强化)**: ①新节内容先写成独立文本;②插入 anchor 必须用**最后出现**的标题(`src.rfind("## 七、")`,教训补充 2)——**禁止用 "## 七" 整行当 oldString**(6.82 曾吞标题;6.87 曾命中反引号内引用致双副本);③**立即 `grep -n "^### 6\.9"` 校验连续递增 + `grep -n "^## 七"` 标题恰好 1 个 + `grep -n "^## 八"` 仍在**;④再做其他编辑
+6. 26 域后 → 35-dcmd / 40-launcher / 47-instrumentation
 ```
 **环境**: Linux 容器,无显示器(GUI 截图等用户在 Ubuntu 补);jdk11u 源码在本地;git 推送即部署(docsify 站点)。**上下文已满: 本文件写完后,新会话只读本文件即可继续,不要依赖旧会话的记忆。**
